--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Python</title>
+    <title>Java</title>
     <link rel="stylesheet" href="../static/css/index.css" />
     <script src="../static/js/index.js"></script>
   </head>
