--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8"/>
     <title>Java</title>
-    <link rel="stylesheet" href="../static/css/index.css" />
-    <script src="../static/js/index.js"></script>
-  </head>
-  <body>
-    <div id="App">
-      <img class="study-icon" src="../static/img/study.png" alt="" />
-      <div class="title">Life is long , &nbsp;you need Java . . .</div>
-      <div class="content" >{{text}}</div>
-    </div>
-  </body>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/index.css"/>
+    <script src="/js/index.js"></script>
+</head>
+<body>
+<div id="App">
+    <img class="study-icon" src="/img/study.png" alt=""/>
+    <div class="title" th:text="${title}">Life is long , &nbsp;you need Java . . .</div>
+    <div class="content" th:text="${content}">Hello Java ~</div>
+</div>
+</body>
 </html>
 
