--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Java</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/index.css"/>
-    <script src="/js/index.js"></script>
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/static/css/index.css"/>
+    <script src="/static/js/index.js"></script>
 </head>
 <body>
 <div id="App">
-    <img class="study-icon" src="/img/study.png" alt=""/>
+    <img class="study-icon" src="/static/img/study.png" alt=""/>
     <div class="title" th:text="${title}">Life is long , &nbsp;you need Java . . .</div>
     <div class="content" th:text="${content}">Hello Java ~</div>
 </div>
